[project]
name = "mcp-knowledge-tools"
version = "0.1.0"
description = "MCP server exposing internal knowledge retrieval tools."
authors = [{name = "Generated", email = "generated@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "modelcontextprotocol>=0.1.0",
]

[project.scripts]
mcp-knowledge-server = "mcp_knowledge_tools.server:mcp.run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
